# rust-programming-challenges

./: .gitignore  README.md  empirical-study.xlsx  tmp.rs  user-study.xlsx
new-dataset-2024-with-unit-test/: Cargo.toml
new-dataset-2024-with-unit-test/24847331/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/26190213/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/26409316/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/27716654/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/27856991/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/27856991-3/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/28008585/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/29711348/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/30073684/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/31067031/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/33727808/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/35038461/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/35038461-2/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/36117966/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/36672245/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/38043377/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/39827244/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/40165686/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/40262957/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/40814832/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/41045011/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/41431189/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/41529200/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/42534811/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/42812232/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/43661262/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/45898588/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/46393890/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/46965867/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/47477739/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/47933532/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/49077797/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/49393139/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/50090553/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/51600816/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/51701393/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/52838884/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/53242052/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/56060983/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/56061899/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/56336526/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/58043281/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/58157680/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/58207846/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/58559969/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/58683326/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/59022234-2/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/60029939/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/60897823-1/: buggy.rs
new-dataset-2024-with-unit-test/60897823-2/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/61061853/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/61121260/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/61132815-1/: buggy.rs
new-dataset-2024-with-unit-test/61132815-2/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/61223234/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/61297300/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/61560298/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/61665203/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/63428868/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/64040987/: buggy.rs
new-dataset-2024-with-unit-test/64040987-2/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/64043682/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/64528913/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/64627891/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/64782348/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/64811159/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/65173868/: buggy.rs
new-dataset-2024-with-unit-test/65173868-2/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/65545236/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/66146029/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/66309886/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/66330144/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/66411362/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/67408899/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/68598464/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/69059587/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/69405403/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/70148904/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/70439544/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/70717050/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/70768081/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/70768081-2/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/70957110/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/71414803/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/71475734/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/71689224/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/73402009/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/73690343/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/74415939/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/74416599/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/74837218/: buggy.rs  fixed.rs
new-dataset-2024-with-unit-test/74990774/: buggy.rs  fixed.rs
(+332 files in other folders)
