[package]
name = "fixed"
version = "0.1.0"
authors = ["Ryvian <31315697+Ryvian@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.71", features = ["serde-serialize"] }
js-sys = "0.3.48"
serde = { version = "1", features = ["derive"] }